fixed some style and optimizes script for more readability

--- a/style.css
+++ b/style.css
@@ -84,13 +84,6 @@ header label {
 }
 
 
-.movie-details-tab {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2em;
-}
-
 .movie-details {
     display: flex;
     align-items: start;
@@ -122,5 +115,9 @@ header label {
         display: flex;
         flex-direction: column;
         gap: 3em;
+    }
+    .movies {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 10px;
     }
 }
